# fft_channel_vocoder

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml  setup.py
design/: algorithm.md  design.md
docs/: 01-installation.md  02-quick-start.md  03-understanding.md  04-file-organization.md  05-configuration.md  06-advanced-usage.md  07-troubleshooting.md  index.md
fft_channel_vocoder/: __init__.py  __main__.py  buffers.py  clean_audio.py  clean_io.py  cli.py  config.json  config.py  configure_program.py  fft.py  help.py  main.py  midi_synth.py  noise_generators.py  pitch_corrector.py  scale_synth.py
