[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fft_channel_vocoder"
version = "0.1.0"
description = "FFT-based channel vocoder that applies spectral envelope transfer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "mido",
]

[project.scripts]
vocode = "fft_channel_vocoder.main:main"
